[UPDATE] we changed our core entrypoints.
